Routine sync-ing up of my files with the remote.

--- a/FACTIUNN.tex
+++ b/FACTIUNN.tex
@@ -557,9 +557,9 @@ It performs just as well.
             \item epsilon (denominator offset parameter) (if applicable)
             \item learning rate
         \end{itemize}
-        \item Normalization techniques applied
+        \item Normalization techniques applied:
         \begin{itemize}
-            \item Take log of features
+            \item logarithmize the numerical values of features
             % \item take log of labels (spectrum)
             % \item take fourier transform of labels (spectrum)
         \end{itemize}
